css/main.css
@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');

* {
  box-sizing: border-box;
}

html {
  border: 20px solid rgb(0,0,0);
  padding: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  content: '';
  clear: both;
  display: table;
}

body {
  background-color: rgb(43,228,234);
  font-family: 'Courier New', Courier, monospace;

  width: 100%;
  border: 5px solid rgb(255,87,125);
  height: 100%;
  /*  
  border-top: 20px solid rgb(0,0,0);
  border-right: 20px solid rgb(255,132,0);
  border-bottom: 20px solid rgb(61,37,123);
  border-left: 20px solid rgb(253,237,0);
  */
  padding: 0;
  margin: auto;
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {
  /* font-family: 'VT323', monospace; */
  font-family: 'Bungee Shade', cursive;
  /* font-family: 'Monoton', cursive; */
  /* font-family: 'IBM Plex Mono', monospace; */
}

h1 {
  font-size: 3em;
  display: inline-block;
  margin-bottom: 0;
}

a {
  background-color: rgb(0,0,0);
  color:rgb(0,0,255);
  text-decoration: none;
  padding: .5em;
}

a:hover {
  border-bottom-width: .1em;
  border-bottom-style: solid;
  border-bottom-color: rgb(0,0,255);
}

#pizza-crust {
  background-color: rgb(253,237,0);
  white-space: nowrap;
  display: inline-block;
}

#pizza-sauce {
  background-color: rgb(255,43,43);
  white-space: nowrap;
  display: inline-block;
}

#pizza-cheeses {
  background-color: rgb(255,255,255);
  white-space: nowrap;
  display: inline-block;
}

.home {
  color: rgb(255,255,255);
}

ul, ol {
  display: inline-block;
  width: 50%;
  text-align: left;
}

li {
  margin: 0;
  padding: 0;
}

